--- a/index.html
+++ b/index.html
@@ -42,12 +42,11 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Projects</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="project-m.html">Project MBTI</a></li>
-                                    <li><a class="dropdown-item" href="project-s.html">Project S@ndwich</a></li>
+                                    <li><a class="dropdown-item" href="projects/mbti.html">Project MBTI</a></li>
+                                    <li><a class="dropdown-item" href="projects/sandwich.html">Project S@ndwich</a></li>
                                     <!--<li><hr class="dropdown-divider" /></li>-->
                                 </ul>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="toolkit.html">Toolkit</a></li>
                             <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
@@ -70,7 +69,7 @@
                                             <h2 class="fw-bolder">Project MBTI</h2>
                                             <p>Can we curate a set of personas, akin to the Myers-Briggs Type Indicator (MBTI) tailored specifically for health insurance, based on individuals' healthcare needs, preferences, and behaviors?</p>
                                             <p>Project MBTI aims to simplify the decision-making process to empower you to make informed choices for your health coverage.</p>
-                                            <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="project-m.html">Learn More</a>
+                                            <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="projects/mbti.html">Learn More</a>
                                         </div>
                                         <div class="col-4">
                                             <img class="img-fluid" src="assets/Slide3.png" alt="Sandwich Generation" />
@@ -79,22 +78,6 @@
                                 </div>
                             </div>
                             <!-- Project Card 2-->
-                            <!--<div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                                <div class="card-body p-0">
-                                    <div class="d-flex align-items-center row ps-3">
-                                        <div class="p-5 col">
-                                            <h2 class="fw-bolder">Project Tetromino</h2>
-                                            <p>The financing of U.S. healthcare is messed up, with numerous insurance plans, each with different networks, costs, and coverage. This complexity often leads to decision fatigue and suboptimal choices.</p>
-                                            <p>Project Tetromino elevates your insurance literacy by sharing insider knowledge, so you can avoid the hidden traps.</p>
-                                            <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="/project-t.html">Learn More</a>
-                                        </div>
-                                        <div class="col-4">
-                                            <img class="img-fluid" src="assets/Slide1.png" alt="Project Tetromino">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>-->
-                            <!-- Project Card 3-->
                             <div class="card overflow-hidden shadow rounded-4 border-0">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center row ps-3">
@@ -102,7 +85,7 @@
                                             <h2 class="fw-bolder">Project S@ndwich</h2>
                                             <p>In a "4-2-1" family structure, there are four grandparents, two parents, and one child. Often referred to as the Sandwich Generation, the middle-tier adults face significant burden to support multiple generations financially and emotionally.</p>
                                             <p>Project S@ndwich explores what can be done to support individuals in this modern family structure.</p>
-                                            <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="project-s.html">Learn More</a>
+                                            <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="projects/sandwich.html">Learn More</a>
                                         </div>
                                         <div class="col-4">
                                             <img class="img-fluid" src="assets/Slide2.png" alt="Sandwich Generation" />
