--- a/resources/data.html
+++ b/resources/data.html
@@ -47,7 +47,6 @@
                                     <!--<li><hr class="dropdown-divider" /></li>-->
                                 </ul>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="../toolkit.html">Toolkit</a></li>
                             <li class="nav-item"><a class="nav-link" href="../resources.html">Resources</a></li>
                             <li class="nav-item"><a class="nav-link" href="../contact.html">Contact</a></li>
                         </ul>
@@ -56,38 +55,30 @@
             </nav>
             <!-- Page Content-->
             <div class="container px-5 my-5">
-                <div class="text-center mb-5">
-                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Insights</span></h1>
-                </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
-                        <!-- Project Description-->
+                    
                         <section>
-                            <div class="card shadow border-0 rounded-4 mb-5">
+                            <div class="card shadow border-0 rounded-4 mb-5" id="chart1">
                                 <div class="card-body p-5">
-                                    <!--insight card 1-->
-                                    <div id="insight1">
-                                        <h3 class="fw-bolder mb-0"><span class="text-info d-inline">年龄越大保费越高，45岁以后保费急剧上升<i class="bi bi-emoji-tear"></i><br /></span></h3>
-                                        <div class="pb-3"></div>
-                                        <iframe title="不同年龄段的每月保费价格" aria-label="Interactive line chart" id="datawrapper-chart-QHvKz" src="https://datawrapper.dwcdn.net/QHvKz/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="467" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
-                                        </script>
-                                    </div>
-                                    <hr style="border-top: dotted 1px;" />
-                                    <!--insight card 2-->
-                                    <div id="insight2">
-                                        <h3 class="fw-bolder mb-0"><span class="text-info d-inline">医保费用的高低与你所在的地区有很大的关系</span></h3>
-                                        <div class="pb-3"></div>
-                                        <iframe title="奥巴马医保平均每月保费" aria-label="Map" id="datawrapper-chart-Nxd9E" src="https://datawrapper.dwcdn.net/Nxd9E/7/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="516" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
-                                        </script>
-                                    </div>
-                                    <hr style="border-top: dotted 1px;" />
-                                    <!--insight card 3-->
-                                    <div id="insight3">
-                                        <h3 class="fw-bolder mb-0"><span class="text-info d-inline">同样的医院同样的治疗，不同保险会有不同的收费标准</span></h3>
-                                        <div class="pb-3"></div>
-                                        <iframe title="西北大学纪念医院 骨折类治疗费用（按保险类型分类）" aria-label="Bar Chart" id="datawrapper-chart-4ebNJ" src="https://datawrapper.dwcdn.net/4ebNJ/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="556" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
-                                        </script>
-                                    </div>
+                                    <!-- <h3 class="fw-bolder mb-0"><span class="text-info d-inline">Headline</span></h3> -->
+                                    <div class="pb-3"></div>
+                                    <iframe title="Premium Increases with Age with Significant Jump after Age 45" aria-label="Interactive line chart" id="datawrapper-chart-QHvKz" src="https://datawrapper.dwcdn.net/QHvKz/6/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="472" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+                                    </script>
+                                </div>
+                            </div>
+
+                            <div class="card shadow border-0 rounded-4 mb-5" id="chart2">
+                                <div class="card-body p-5">
+                                    <iframe title="Wide Swing in Premium across States" aria-label="Map" id="datawrapper-chart-Nxd9E" src="https://datawrapper.dwcdn.net/Nxd9E/8/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="534" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+                                    </script>
+                                </div>
+                            </div>
+
+                            <div class="card shadow border-0 rounded-4 mb-5" id="chart3">
+                                <div class="card-body p-5">
+                                    <iframe title="Same Hospital, Same Treatment, Different Prices" aria-label="Bar Chart" id="datawrapper-chart-4ebNJ" src="https://datawrapper.dwcdn.net/4ebNJ/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="551" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+                                    </script>                            
                                 </div>
                             </div>
                         </section>
