--- a/projects/mbti.html
+++ b/projects/mbti.html
@@ -16,10 +16,10 @@
         gtag('config', 'G-CCE37Z32EH');
         </script>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
-        <link rel="icon" href="assets/favicon/favicon-32x32.png" sizes="32x32">
-        <link rel="icon" href="assets/favicon/android-chrome-192x192.png" sizes="192x192">
-        <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/x-icon" href="../assets/favicon/favicon.ico" />
+        <link rel="icon" href="../assets/favicon/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" href="../assets/favicon/android-chrome-192x192.png" sizes="192x192">
+        <link rel="apple-touch-icon" href="../assets/favicon/apple-touch-icon.png">
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,7 +27,7 @@
         <!-- Bootstrap icons-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="../css/styles.css" rel="stylesheet" />
         <!-- Load d3.js -->
         <script src="https://d3js.org/d3.v4.js"></script>
         <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
@@ -38,22 +38,21 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-gradient">KD's Sandbox</span></a>
+                    <a class="navbar-brand" href="../index.html"><span class="fw-bolder text-gradient">KD's Sandbox</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Projects</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="project-m.html">Project MBTI</a></li>
-                                    <li><a class="dropdown-item" href="project-s.html">Project S@ndwich</a></li>
+                                    <li><a class="dropdown-item" href="mbti.html">Project MBTI</a></li>
+                                    <li><a class="dropdown-item" href="sandwich.html">Project S@ndwich</a></li>
                                     <!--<li><hr class="dropdown-divider" /></li>-->
                                 </ul>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="toolkit.html">Toolkit</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../resources.html">Resources</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../contact.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -63,7 +62,7 @@
                 <div class="text-center mb-5">
                     <div class="col-md-8 mx-auto">
                         <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Project MBTI</span></h1>
-                        <p class="lead text-muted pt-sm-3">With a curated set of personas based on individuals&apos; healthcare needs, preferences, and behaviors, project MBTI aims to simplify the decision-making process to empower you to make informed choices for your health coverage.</p>
+                        <p class="lead text-muted pt-sm-3">With a curated set of personas based on individuals&apos; healthcare needs, preferences, and behaviors, project MBTI aims to simplify the decision-making process to empower you to make informed choices for your health coverage. Join the <a href="https://czptf3ysf5q.typeform.com/to/m9zBnqSx" class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">waitlist</a> to learn more.</p>
                     </div>
                 </div>
                 <section class="card shadow border-0 rounded-4 mb-5">
@@ -71,21 +70,21 @@
                         <!-- Three columns of text below the carousel -->
                         <div class="row">
                             <div class="col-lg-4">
-                            <img src="assets/persona/persona8.png" alt="" width="180" height="180">
+                            <img src="../assets/persona/persona8.png" alt="" width="180" height="180">
                             <h2 class="fw-normal">Elva, 26-year-old freelance writer</h2>
                             <p>Elva is a 26-year-old freelance writer who reached the age cutoff and can no longer receive coverage through her parents. </p>
                             <p>Having never purchased health insurance for herself, she is unfamiliar with health insurance terminology like coinsurance, deductible, and out-of-pocket maximum. She also wants to know what financial assistance she can receive, if any, to help her pay for coverage.</p>
                             <!-- <p><a class="btn btn-outline-dark" href="#">View details &raquo;</a></p> -->
                             </div><!-- /.col-lg-4 -->
                             <div class="col-lg-4">
-                            <img src="assets/persona/persona2.png" alt="" width="180" height="180">
+                            <img src="../assets/persona/persona2.png" alt="" width="180" height="180">
                             <h2 class="fw-normal">Rami, 30-year-old software engineer</h2>
                             <p>Rami is a 30-year-old software engineer who lost employer-provided coverage due to recent waves of tech layoffs. He needs basic coverage until he finds new employment that includes health insurance. </p>
                             <p>Rami needs help understanding the different choices: COBRA vs Marketplace vs short term plan. </p>
                             <!-- <p><a class="btn btn-outline-dark" href="#">View details &raquo;</a></p> -->
                             </div><!-- /.col-lg-4 -->
                             <div class="col-lg-4">
-                            <img src="assets/persona/persona4.png" alt="" width="180" height="180">
+                            <img src="../assets/persona/persona4.png" alt="" width="180" height="180">
                             <h2 class="fw-normal">Naomi, 37-year-old single mother</h2>
                             <p>Naomi is a 37-year-old single mother with two children who recently changed jobs and her new employer does not offer health insurance coverage.</p>
                             <p>Obtaining cost effective coverage is a priority for her and her children. She needs help identify a plan tailored to her family&apos;s unique circumstances, including accessing Advance Payments of the Premium Tax Credits (APTC) to reduce her monthly premium by 50%. </p>
@@ -95,21 +94,21 @@
                         <div class="pb-5"></div>
                         <div class="row">
                             <div class="col-lg-4">
-                            <img src="assets/persona/persona9.png" alt="" width="180" height="180">
+                            <img src="../assets/persona/persona9.png" alt="" width="180" height="180">
                             <h2 class="fw-normal">Satoshi, 45-year-old in dual income family</h2>
                             <p>Satoshi is a 45-year-old corporate manager who wants to figure out the best health insurance option for himself and his wife, both of whom have coverage through their respective employers. </p>
                             <p>He needs assistance in comparing the benefits, costs, and coverage limits of each plan and may seek guidance on coordinating benefits between their two policies, optimizing coverage for their family's medical expenses, and understanding potential out-of-pocket expenses. </p>
                             <!-- <p><a class="btn btn-outline-dark" href="#">View details &raquo;</a></p> -->
                             </div><!-- /.col-lg-4 -->
                             <div class="col-lg-4">
-                            <img src="assets/persona/persona7.png" alt="" width="180" height="180">
+                            <img src="../assets/persona/persona7.png" alt="" width="180" height="180">
                             <h2 class="fw-normal">Lynda, owner of a small business</h2>
                             <p>Lynda is the owner of a small businesswho wants to offer coverage to her new employees. She recently learned of a new coverage option called an Individual Coverage Health Reimbursement Arrangement (ICHRA).</p>
                             <p>ICHRA gives her the option to offer her employees a monthly allowance of tax-free money to buy individual market health insurance that fits their unique needs. She wonders if this is the right approach.</p>
                             <!-- <p><a class="btn btn-outline-dark" href="#">View details &raquo;</a></p> -->
                             </div><!-- /.col-lg-4 -->
                             <div class="col-lg-4">
-                            <img src="assets/persona/persona6.png" alt="" width="180" height="180">
+                            <img src="../assets/persona/persona6.png" alt="" width="180" height="180">
                             <h2 class="fw-normal">Elias, 63-year-old early retiree</h2>
                             <p>Elias is a 63-year-old early retiree who is not yet Medicare eligible but in need of health insurance. </p>
                             <p>Elias suffers from a host of chronic conditions, including diabetes, and needs a plan that includes his endocrinologist and local hospital in-network, does not have a high-deductible, and has a premium less than $500 per month. </p>
@@ -139,6 +138,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="../js/scripts.js"></script>
     </body>
 </html>
