--- a/resources/choose.html
+++ b/resources/choose.html
@@ -16,10 +16,10 @@
         gtag('config', 'G-CCE37Z32EH');
         </script>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
-        <link rel="icon" href="assets/favicon/favicon-32x32.png" sizes="32x32">
-        <link rel="icon" href="assets/favicon/android-chrome-192x192.png" sizes="192x192">
-        <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/x-icon" href="../assets/favicon/favicon.ico" />
+        <link rel="icon" href="../assets/favicon/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" href="../assets/favicon/android-chrome-192x192.png" sizes="192x192">
+        <link rel="apple-touch-icon" href="../assets/favicon/apple-touch-icon.png">
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -42,12 +42,11 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Projects</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="../project-m.html">Project MBTI</a></li>
-                                    <li><a class="dropdown-item" href="../project-s.html">Project S@ndwich</a></li>
+                                    <li><a class="dropdown-item" href="../projects/mbti.html">Project MBTI</a></li>
+                                    <li><a class="dropdown-item" href="../projects/sandwich.html">Project S@ndwich</a></li>
                                     <!--<li><hr class="dropdown-divider" /></li>-->
                                 </ul>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="../toolkit.html">Toolkit</a></li>
                             <li class="nav-item"><a class="nav-link" href="../resources.html">Resources</a></li>
                             <li class="nav-item"><a class="nav-link" href="../contact.html">Contact</a></li>
                         </ul>
