--- a/resources/data.html
+++ b/resources/data.html
@@ -65,6 +65,12 @@
                                     <div class="pb-3"></div>
                                     <iframe title="Premium Increases with Age with Significant Jump after Age 45" aria-label="Interactive line chart" id="datawrapper-chart-QHvKz" src="https://datawrapper.dwcdn.net/QHvKz/6/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="472" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
                                     </script>
+                                     <!--like button-->
+                                     <div class="CountLike" id="Like_Count_1">
+                                        <button>
+                                        <i class="bi bi-heart-fill"></i> Like <span class="counterStat">...</span>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
 
@@ -72,13 +78,25 @@
                                 <div class="card-body p-5">
                                     <iframe title="Wide Swing in Premium across States" aria-label="Map" id="datawrapper-chart-Nxd9E" src="https://datawrapper.dwcdn.net/Nxd9E/8/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="534" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
                                     </script>
+                                     <!--like button-->
+                                     <div class="CountLike" id="Like_Count_2">
+                                        <button>
+                                        <i class="bi bi-heart-fill"></i> Like <span class="counterStat">...</span>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
 
                             <div class="card shadow border-0 rounded-4 mb-5" id="chart3">
                                 <div class="card-body p-5">
                                     <iframe title="Same Hospital, Same Treatment, Different Prices" aria-label="Bar Chart" id="datawrapper-chart-4ebNJ" src="https://datawrapper.dwcdn.net/4ebNJ/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="551" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
-                                    </script>                            
+                                    </script>
+                                     <!--like button-->
+                                     <div class="CountLike" id="Like_Count_3">
+                                        <button>
+                                        <i class="bi bi-heart-fill"></i> Like <span class="counterStat">...</span>
+                                        </button>
+                                    </div>                         
                                 </div>
                             </div>
                         </section>
@@ -105,5 +123,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="../js/scripts.js"></script>
+        <!--count likes-->
+        <script type="module" src="../js/counter.js"></script>
     </body>
 </html>
