--- a/resources/data.html
+++ b/resources/data.html
@@ -59,26 +59,30 @@
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                     
                         <section>
-                            <div class="card shadow border-0 rounded-4 mb-5" id="chart1">
-                                <div class="card-body p-5">
+                            <div class="row align-items-center gx-5 bg-white shadow p-2 rounded-4" id="chart1">
+                                <div>
                                     <!-- <h3 class="fw-bolder mb-0"><span class="text-info d-inline">Headline</span></h3> -->
                                     <div class="pb-3"></div>
                                     <iframe title="Premium Increases with Age with Significant Jump after Age 45" aria-label="Interactive line chart" id="datawrapper-chart-QHvKz" src="https://datawrapper.dwcdn.net/QHvKz/6/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="472" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
                                     </script>
                                 </div>
                             </div>
-
-                            <div class="card shadow border-0 rounded-4 mb-5" id="chart2">
-                                <div class="card-body p-5">
+                            <div class="pb-5"></div>
+                            <div class="row align-items-center gx-5 bg-white shadow p-2 rounded-4" id="chart2">
+                                <div>
+                                    <!-- <h3 class="fw-bolder mb-0"><span class="text-info d-inline">Headline</span></h3> -->
+                                    <div class="pb-3"></div>
                                     <iframe title="Wide Swing in Premium across States" aria-label="Map" id="datawrapper-chart-Nxd9E" src="https://datawrapper.dwcdn.net/Nxd9E/8/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="534" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
                                     </script>
                                 </div>
                             </div>
-
-                            <div class="card shadow border-0 rounded-4 mb-5" id="chart3">
-                                <div class="card-body p-5">
+                            <div class="pb-5"></div>
+                            <div class="row align-items-center gx-5 bg-white shadow p-2 rounded-4" id="chart3">
+                                <div>
+                                    <!-- <h3 class="fw-bolder mb-0"><span class="text-info d-inline">Headline</span></h3> -->
+                                    <div class="pb-3"></div>
                                     <iframe title="Same Hospital, Same Treatment, Different Prices" aria-label="Bar Chart" id="datawrapper-chart-4ebNJ" src="https://datawrapper.dwcdn.net/4ebNJ/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="551" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
-                                    </script>                       
+                                    </script>
                                 </div>
                             </div>
                         </section>
