--- a/projects/sandwich.html
+++ b/projects/sandwich.html
@@ -116,8 +116,7 @@
                                     <li>慢性病配常用药</li>
                                     <li>万一有严重疾病或意外需要紧急治疗，治疗不至于倾家荡产</li>
                                 </ol>
-                                针对需求1和2，可以通过远程医疗（Tele-health）和急诊中心（Urgent Care）解决，费用在几百块左右。对于重大风险，60岁以上的人最容易发生心脏病、中风、骨折等紧急情况。以芝加哥的Northwestern Memorial Hospital为例，住院费用大部分情况下在2-3万美元，严重情况可能高达几十万或甚至上百万（重症监护室）。
-                                </p>
+                                针对需求1和2，可以通过远程医疗（Tele-health）和急诊中心（Urgent Care）解决，费用在几百块左右。对于重大风险，60岁以上的人最容易发生心脏病、中风、骨折等紧急情况。以芝加哥的Northwestern Memorial Hospital为例，住院费用大部分情况下在2-3万美元，严重情况可能高达几十万或甚至上百万（重症监护室）。美国的医疗费用虽然高昂，但幸运的是，如果真的支付不起，医院通常会提供折扣或无息贷款。</p>
                             <div class="row align-items-center gx-5 bg-white shadow p-2 rounded-4">
                                 <iframe title="西北大学纪念医院治疗费用" aria-label="Split Bars" id="datawrapper-chart-sqV0u" src="https://datawrapper.dwcdn.net/sqV0u/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="282" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
                                 </script>  
@@ -174,14 +173,14 @@
                             <div class="pb-3"></div>
                             <p class="fw-bolder text-gradient d-inline">问题三：我该怎么选择？</p>
                             <div class="pb-3"></div>
-                            <p>Life is all about tradeoffs. 选择适合的医疗保险（或不买保险）需要综合考虑：</p>
+                            <p>选择适合的医疗保险（或不买保险）需要综合考虑：</p>
                             <ul>
                                 <li>父母的健康状况</li>
                                 <li>在美期间可能面临的医疗费用（见问题一）</li>
                                 <li>财务状况和预算</li>
                                 <li>美国医疗体系和保险产品（见问题二）</li>
                             </ul>
-                            <p>美国的医疗费用虽然高昂，但幸运的是，如果真的支付不起，医院通常会提供折扣或无息贷款。</p>
+                            <p>Life is all about tradeoffs. </p>
                             <p>May you never have to use insurance. <i class="bi bi-heart text-gradient"></i></p>
                             <hr style="border-top: dotted 1px;" />
                             <div class="d-flex justify-content-center fs-2 gap-4">
