--- a/projects/sandwich.html
+++ b/projects/sandwich.html
@@ -106,7 +106,7 @@
                                     <li>不确定应该购买什么</li>
                                 </ul>
                             </p>
-                            <p>作为背负着独身子女重担的学霸 <span class="text-gradient"><i class="bi bi-emoji-sunglasses"></i></span>，我们决定翻遍全网探个究竟：到底什么是最佳选择？</p>
+                            <p>作为背负着独身子女重担的学霸 <i class="bi bi-emoji-sunglasses"></i>，我们决定翻遍全网探个究竟：到底什么是最佳选择？</p>
                             <p class="fw-bolder text-gradient d-inline" id="q1">问题一：我需要承担的风险是什么？</p>
                             <div class="pb-3"></div>
                             <p>关于父母的医疗需求，我们询问了周围的朋友，大家认为的需求包括：
@@ -177,7 +177,7 @@
                                 <li>美国医疗体系和保险产品（见<a href="#q2" class="link-dark">问题二</a>）</li>
                             </ul>
                             <p>Life is all about tradeoffs. </p>
-                            <p>May you never have to use insurance. <i class="bi bi-heart text-gradient"></i></p>                         
+                            <p>May you never have to use insurance. <i class="bi bi-heart"></i></p>                         
                             <hr style="border-top: dotted 1px;" />
                             <div class="d-flex justify-content-center fs-5 gap-4">
                                 <button class="btn btn-outline-dark" id="like-button"><i class="bi bi-heart-fill"></i>&nbsp;&nbsp;Like <span id="like-count">50</span></button>
