--- a/projects/sandwich.html
+++ b/projects/sandwich.html
@@ -176,8 +176,7 @@
                                 <li>财务状况和预算</li>
                                 <li>美国医疗体系和保险产品（见<a href="#q2" class="link-dark">问题二</a>）</li>
                             </ul>
-                            <p>Life is all about tradeoffs. </p>
-                            <p>May you never have to use insurance. <i class="bi bi-heart"></i></p>                         
+                            <p>Life is all about tradeoffs. Choose wisely. <i class="bi bi-heart"></i></p>                        
                             <hr style="border-top: dotted 1px;" />
                             <div class="d-flex justify-content-center fs-5 gap-4">
                                 <button class="btn btn-outline-dark" id="like-button"><i class="bi bi-heart-fill"></i>&nbsp;&nbsp;Like <span id="like-count">50</span></button>
