--- a/projects/sandwich.html
+++ b/projects/sandwich.html
@@ -179,9 +179,8 @@
                             <p>Life is all about tradeoffs. Choose wisely. <i class="bi bi-heart"></i></p>                        
                             <hr style="border-top: dotted 1px;" />
                             <div class="d-flex justify-content-center fs-5 gap-4">
-                                <button class="btn btn-outline-dark" id="like-button"><i class="bi bi-heart-fill"></i>&nbsp;&nbsp;Like <span id="like-count">50</span></button>
-                                
-                                <a class="btn btn-outline-dark" href="mailto:khris.dai@icloud.com?subject=Hello!"><i class="bi bi-envelope"></i>&nbsp;&nbsp;Email&nbsp;</a>
+                                <button class="btn btn-outline-dark" id="like-button"><i class="bi bi-heart-fill"></i>&nbsp;&nbsp;Like <span id="like-count">50</span></button>         
+                                <a class="btn btn-outline-dark" href="mailto:khris.dai@icloud.com?subject=Hello!"><i class="bi bi-envelope"></i>&nbsp;&nbsp;Contact&nbsp;</a>
                                 <button id="copy-link-button" class="btn btn-outline-dark"><i class="bi bi-share-fill"></i>&nbsp;&nbsp;Share&nbsp;</button>
                                 <div id="copy-message" style="font-size: 0.8rem;">Link Copied</div>
                             </div>
